changed container sizing issues

--- a/src/styles/colors.css
+++ b/src/styles/colors.css
@@ -3,6 +3,7 @@
 	--primary-color: #ff0063;
 	--white-color: #ffffff;
 	/* --primary-color: #D61355; */
-	--secondary-color: #0a2647;
+	/* --secondary-color: #0a2647; */
+	--secondary-color: #040e1a;
 	/* --secondary-color: #144272; */
 }
