--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,5 +1,6 @@
 body {
 	background: var(--secondary-color);
-	font-family: "Poppins", sans-serif;
+	/* font-family: "Poppins", sans-serif; */
+	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
 	min-height: 100vh;
 }
