--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,5 +1,26 @@
+*,
+*::after,
+*::before {
+	margin: 0;
+	padding: 0;
+	box-sizing: inherit;
+}
+
+html {
+	/* 1rem == 10px */
+	height: 100%;
+	scroll-behavior: smooth;
+
+	/* in the future use mediaqueries here to change the %, it will make everything bigger or smaller */
+}
+
 body {
 	background: var(--secondary-color);
 	font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-	min-height: 100vh;
+	width: 100%;
+	height: 100%;
+}
+
+#root {
+	height: 100%;
 }
